# SNL-Delft3D-CEC-Verify

./: pyproject.toml
.conda/: environment.yml
.github/workflows/: docs.yml  release.yml  static_type_checks.yml  unit_tests.yml
main/: genindex.html  index.html  py-modindex.html  search.html
main/api/: snl_d3d_cec_verify.copier.html  snl_d3d_cec_verify.grid.html  snl_d3d_cec_verify.html  snl_d3d_cec_verify.report.html  snl_d3d_cec_verify.result.html  snl_d3d_cec_verify.runner.html  snl_d3d_cec_verify.text.html
main/validation/: index.html
main/validation/comparison/: report.html
main/validation/fm/linux/: report.html
main/validation/fm/windows/: report.html
main/validation/structured/linux/: report.html
