[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pywintypes",
]
doctest_optionflags = "NORMALIZE_WHITESPACE"

[tool.semantic_release]
branch = "main"
version_pattern = [
    "README.md:snl-delft3d-cec-verify=(\\d+\\.\\d+\\.\\d+)",
    "setup.cfg:version = (\\d+\\.\\d+\\.\\d+)",
    ".conda/recipe/meta.yaml:{{% set version = \"(\\d+\\.\\d+\\.\\d+)\" %}}",
    "docs/conf.py:release = '(\\d+\\.\\d+\\.\\d+)'",
    "docs/conf.py:smv_latest_version = 'v(\\d+\\.\\d+\\.\\d+)'",
    "docs/_assets/gh-pages-redirect.html:v(\\d+\\.\\d+\\.\\d+)"
]
commit_parser = "semantic_release.history.emoji_parser"
upload_to_repository = "false"
